--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/jskey=YOUR_API_KEY&loading=async&v=weekly"></script>
+    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD1hJslP80ZJB_hvkyj4OLnsVPiqnox8pE&libraries=places&loading=async"></script>
     <meta charset="utf-8" />
     <link rel="icon" type="image/png" href="%PUBLIC_URL%/Fulfil120.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -30,7 +30,7 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    
+   
     <div id="root"></div>
     <!--
       This HTML file is a template.
