--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-L1NYM78YH7"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-L1NYM78YH7');
+</script>
     <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD1hJslP80ZJB_hvkyj4OLnsVPiqnox8pE&libraries=places&loading=async"></script>
     <meta charset="utf-8" />
     <link rel="icon" type="image/png" href="%PUBLIC_URL%/Fulfil120.jpg" />
