--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <script defer data-domain="getfulfil.com" src="https://plausible.io/js/script.js"></script>
 
     <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD1hJslP80ZJB_hvkyj4OLnsVPiqnox8pE&libraries=places&loading=async"></script>
     <meta charset="utf-8" />
@@ -9,7 +10,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Fulfil"
     />
     
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
