lets run this meta tage test

--- a/public/index.html
+++ b/public/index.html
@@ -13,9 +13,14 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Fulfil"
+      content="A job marketplace"
     />
-    
+    <!-- Open Graph / Facebook -->
+<meta property="og:type" content="website" />
+<meta property="og:url" content="https://getfulfil.com/" />
+<meta property="og:title" content="Fulfil" />
+<meta property="og:description" content="A job marketplace" />
+<meta property="og:image" content="https://metatags.io/images/meta-tags.png" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
