--- a/public/index.html
+++ b/public/index.html
@@ -15,13 +15,14 @@
       name="description"
       content="A job marketplace"
     />
+    <meta property="og:image" content="%PUBLIC_URL%/Fulfil120.jpg" />
     <!-- Open Graph / Facebook -->
 <meta property="og:type" content="website" />
 <meta property="og:url" content="https://getfulfil.com/" />
 <meta property="og:title" content="Fulfil" />
 <meta property="og:description" content="A job marketplace" />
-<meta property="og:image" content="https://metatags.io/images/meta-tags.png" />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+<meta property="og:image" content="%PUBLIC_URL%/Fulfil120.jpg"/>
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/Fulfil120.jpg" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
