added link copy

--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
 <meta property="og:type" content="website" />
 <meta property="og:url" content="https://getfulfil.com/" />
 <meta property="og:title" content="Fulfil" />
-<meta property="og:description" content="A job marketplace" />
+<meta property="og:description" content="A job marketplace for trades" />
 <meta property="og:image" content="%PUBLIC_URL%/Fulfil2JPEG.jpg"/>
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/Fulfil2JPEG.jpg" />
     <!--
