--- a/public/index.html
+++ b/public/index.html
@@ -19,14 +19,14 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="A job marketplace"
+      content="Fulfil connects you with high-paying entry-level jobs that are the start to great career paths. No experience needed."
     />
     <meta property="og:image" content="%PUBLIC_URL%/Fulfil2JPEG.jpg" />
     <!-- Open Graph / Facebook -->
 <meta property="og:type" content="website" />
 <meta property="og:url" content="https://getfulfil.com/" />
 <meta property="og:title" content="Fulfil" />
-<meta property="og:description" content="A job marketplace for trades" />
+<meta property="og:description" content="Fulfil connects you with high-paying entry-level jobs that are the start to great career paths. No experience needed." />
 <meta property="og:image" content="%PUBLIC_URL%/Fulfil2JPEG.jpg"/>
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/Fulfil2JPEG.jpg" />
     <!--
